--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -32,8 +32,8 @@ $googleplus: #dd4b39;
 // Typography
 $headline-font: 'UniversLTStd-XBlack', "Arial Black", Helvetica, Arial, sans-serif;
 $headline-weight: normal;
-$paragraph-font: 'UniversLTStd-Light', Helvetica, Arial, sans-serif;
-$text-font: 'UniversLT-Condensed', 'UniversLTStd-CnObl', 'UniversLT-CondensedBold', 'UniversLTStd-BoldCnObl', Helvetica, Arial, sans-serif;
+$paragraph-font: Helvetica, Arial, sans-serif;
+$text-font: Helvetica, Arial, sans-serif;
 $text-weight: normal;
 $font-size: 16px;
 $line-height: 1.5;
