--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -14,23 +14,23 @@ $play-icon-links: true;
 
 // Breakpoints
 $break_large: 1000px;
-$break_medium: 800px;
-$break_small: 500px;
+$break_medium: 700px;
+$break_small: 400px;
 
 // Colors
-$primary: #81c441; // orange
+$primary: #2c7aa7;
 $background: #fff;
-$background-secondary: #f5f5f5; // muted light green
+$background-secondary: #f5f5f5;
 $text: #555;
 $black: #000;
-$action-color: #ff7d49; // orange
-$accent-color: #ff7d49; // green
+$action-color: #2c7aa7;
+$accent-color: #2c7aa7; 
 $twitter: #55acee;
 $facebook: #3b5998;
 $googleplus: #dd4b39;
 
 // Typography
-$headline-font: 'UniversLTStd-XBlack', "Arial Black", Helvetica, Arial, sans-serif;
+$headline-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $headline-weight: normal;
 $paragraph-font: Helvetica, Arial, sans-serif;
 $text-font: Helvetica, Arial, sans-serif;
