--- a/source/stylesheets/lib/_hamburger-menu.scss
+++ b/source/stylesheets/lib/_hamburger-menu.scss
@@ -160,3 +160,102 @@
 	    }
 	}
 }
+
+nav ul.menu {
+  width: 33em;
+  max-width: 100%;
+  ul.menu-categories {
+    border-bottom: 2px solid #000;
+    padding: 0;
+    font-size: 0px;
+    @mixin bg-no-repeat {
+      background-repeat: no-repeat;
+      background-position: 50%;
+    }
+
+    li {
+      box-sizing: border-box;
+      width: 19.7%;
+      display: inline-block;
+      border-right: 2px solid #000;
+      text-align: center;
+      padding-bottom: 10px;
+      font-size: 12px;
+      @media (max-width: $break_small) {
+        font-size: 9px;
+      }
+      text-transform: uppercase;
+      letter-spacing: 0.5pt;
+      span.svg {
+        display: block;
+        width: 50%;
+        height: 40px;
+        color: lighten(#000,30%);
+        margin: 10px auto 0 auto;
+        font-size: 0.9em;
+      }
+      &:last-child {
+        border-right: 0;
+      }
+      &:hover {
+        cursor: pointer;
+        background-color: lighten(#000,20%);
+      }
+      &[data-category='latest'] > .svg {
+        background-image: image-url('icon-latest.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='longform'] > .svg {
+        background-image: image-url('icon-longform.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='video'] > .svg {
+        background-image: image-url('icon-video.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='ama'] > .svg {
+        background-image: image-url('icon-ama.png');
+        @include bg-no-repeat;
+      }
+      &[data-category='infographic'] > .svg {
+        background-image: image-url('icon-infographic.png');
+        @include bg-no-repeat;
+      }
+    }
+  }
+  ul.menu-content {
+    padding: 0;
+    li {
+      text-transform: uppercase;
+      border-bottom: 2px solid #000;
+      padding: 10px 0 15px 0;
+      .subhead, h2 {
+        margin: 0 20px;
+
+        &.video.special {
+          display: none;
+        }
+      }
+      .subhead {
+        font-size: 0.9em;
+      }
+      h2 {
+        padding: 0;
+        margin-top: -0.2em;
+        line-height: 0.5;
+      }
+      h2 a {
+        font-size: 0.4em;
+        color: #fff;
+        font-family: $headline-font;
+        font-weight: normal;
+        line-height: 0.5;
+        -webkit-font-smoothing: antialiased;
+        letter-spacing: 0.2pt;
+      }
+      &:hover {
+        background-color: lighten(#000,20%) !important;
+      }
+    }
+  }
+}
