more css cleanup

--- a/source/stylesheets/lib/_hamburger-menu.scss
+++ b/source/stylesheets/lib/_hamburger-menu.scss
@@ -164,6 +164,7 @@
 nav ul.menu {
   width: 33em;
   max-width: 100%;
+  z-index: 400;
   ul.menu-categories {
     border-bottom: 2px solid #000;
     padding: 0;
