--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -28,6 +28,7 @@ $accent-color: #2c7aa7;
 $twitter: #55acee;
 $facebook: #3b5998;
 $googleplus: #dd4b39;
+$nav-background: rgba(0,0,0,0.4);
 
 // Typography
 $headline-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
