Switching to CDN Typekit

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,7 +14,8 @@
     <script type="text/javascript" src="http://fonts.sbnation.com/wvq7oai.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script src="//fonts.voxmedia.com/ewd4hjq.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <% ooyala_player_code = 'b40f5b65292c4a6f8b3687c8670463fc' %>
     <script type="text/javascript" src="http://player.ooyala.com/v3/<%= ooyala_player_code %>?platform=html5-fallback?tweaks=android-enable-hls"></script>
 
