adding pixel tracker to boilerplate

--- a/source/javascripts/base.js.erb
+++ b/source/javascripts/base.js.erb
@@ -4,6 +4,7 @@
 //= require 'social'
 //= require 'update_url'
 //= require 'menu'
+//= require 'pixel_tracker'
 
 (function($){
   var $articles = $('article');
