fixed ooyala request thanks to Ngan!

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
     <script src="//fonts.voxmedia.com/ewd4hjq.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
     <% ooyala_player_code = 'b40f5b65292c4a6f8b3687c8670463fc' %>
-    <script type="text/javascript" src="http://player.ooyala.com/v3/<%= ooyala_player_code %>?platform=html5-fallback?tweaks=android-enable-hls"></script>
+    <script type="text/javascript" src="http://player.ooyala.com/v3/<%= ooyala_player_code %>?platform=html5-fallback&tweaks=android-enable-hls"></script>
 
     <%= stylesheet_link_tag "style" %>
     <%# This is  is how we pass data from config.rb, or ruby in general, to the javascript %>
