Cleaning things up

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -50,7 +50,7 @@
         </span>
         <%= partial 'partials/hamburger_nav', :locals => {:episodes => episodes} %>
         <div class="right">
-          <a href="http://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=tf&c=20&mc=click&pli=9994846&PluID=0&ord=[timestamp]"><span class="nav__label">Fueled by BP</span></a>
+          <a href="http://bs.serving-sys.com/BurstingPipe/adServer.bs?cn=tf&c=20&mc=click&pli=9994846&PluID=0&ord=[timestamp]"><span class="nav__label">From Our Sponsor</span></a>
           <%= partial 'partials/social_share' %>
         </div>
       </nav>
