--- a/source/partials/_episode_template.html.erb
+++ b/source/partials/_episode_template.html.erb
@@ -86,8 +86,8 @@ category_text = categories.join(' | ')
   <footer class="footer">
       <a class="footer__logo" href="http://voxmedia.com"></a>
       <aside class="footer__text">
-        <p>This feature was produced in collaboration between <a href="http://www.voxmedia.com/media-kit/brand/vox-creative">VOX Creative</a> and <%= sponsor_name %>. The Verge editorial staff was not involved in the creation or production of this content.</p>
-        <small>&copy;<%= Time.new.year %>. Vox Media, Inc. All Rights Reserved</small>
+        <p>This feature was produced in collaboration between <a href="http://www.voxmedia.com/media-kit/brand/vox-creative">Vox Creative</a> and <%= sponsor_name %>. The Verge editorial staff was not involved in the creation or production of this content.</p>
+        <small>&copy; <%= Time.new.year %>. Vox Media, Inc. All Rights Reserved</small>
       </aside>
   </footer>
 </article>
