--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -9,6 +9,9 @@ $vertical: verge; // sbn, verge, polygon
 $container-padding: 10%;
 $max-width: 70em;
 
+// Navigation Bar Height
+$nav-height: 44px;
+
 // Iconography
 $play-icon-links: true;
 
@@ -29,6 +32,8 @@ $twitter: #55acee;
 $facebook: #3b5998;
 $googleplus: #dd4b39;
 $nav-background: rgba(0,0,0,0.4);
+$menu-gradientcolor-1: rgba(255,118,51,0.7);
+$menu-gradientcolor-2: rgba(42,110,15,0.7);
 
 // Typography
 $headline-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -98,13 +103,6 @@ $vox-logo: "vox-media-logo.png";
        image-url('webfonts/2AFB11_5_0.woff') format('woff'),
        image-url('webfonts/2AFB11_5_0.ttf') format('truetype');
 }
- 
-
-// @font-face {
-//   font-family: ;
-//   font-weight: ;
-//   src: image-url(" ");
-// }
 
 // Nav
 $nav-color: #fff;
@@ -120,7 +118,7 @@ $byline-sponsor-logo: "bp-invigorate-logo.png"; // color version of logo
 @import "lib/slider";
 @import "lib/parallax";
 @import "lib/reset";
-@import "lib/fucking-ooyala";
+@import "lib/ooyala";
 @import "lib/nav";
 @import "lib/grid";
 @import "lib/sections";
@@ -128,3 +126,4 @@ $byline-sponsor-logo: "bp-invigorate-logo.png"; // color version of logo
 @import "lib/figures";
 @import "lib/content__social";
 @import "lib/hamburger-menu";
+@import "lib/next-clicks";
