--- a/source/stylesheets/lib/_content__social.scss
+++ b/source/stylesheets/lib/_content__social.scss
@@ -35,7 +35,7 @@ $m: content__social;
 // Social share links for each article
 article .nav__social {
   float: none;
-  padding-bottom: 1%;
+  margin: 2em 0;
 
   a {
     font-family: 'Montserrat', Verdana, Arial, sans-serif;
@@ -55,8 +55,52 @@ article .nav__social {
 
   .nav__social__icon { margin: 0 0.3em 0 0; vertical-align: middle; }
 
+  // don't display linkedin button within the article for now - fix later
+  a[data-share-via="linkedin"] {
+    display: none;
+  }
+
   // .nav__social__icon.twitter { fill: #55acee; }
   // .nav__social__icon.facebook { fill: #3b5998; }
   // .nav__social__icon.googleplus { fill: #dd4b39; }
 
+}
+
+//-----------------------
+//
+// SOCIAL ICONS ADJUSTMENTS
+//
+//-----------------------
+
+// social icons - customizing for bp
+.nav__social__icon.twitter,
+.nav__social__icon.facebook,
+.nav__social__icon.googleplus {
+  fill: #fff !important;
+}
+
+.nav__social [data-share-via] {
+  &:after {
+    color: #fff !important;
+  }
+  font-family: "UniversLT-Condensed";
+  padding: 0.5em;
+  font-size: 0.9em;
+  -webkit-font-smoothing: antialiased;
+}
+
+.nav__social [data-share-via="twitter"] {
+  background-color: $twitter;
+}
+
+.nav__social [data-share-via="facebook"] {
+  background-color: $facebook;
+}
+
+.nav__social [data-share-via="googleplus"] {
+  background-color: $googleplus;
+}
+
+nav .nav__social [data-share-via] {
+  background: none;
 }
