--- a/source/stylesheets/lib/_sections.scss
+++ b/source/stylesheets/lib/_sections.scss
@@ -17,8 +17,11 @@
 }
 
 .content.container {
-  padding: 5%;
+  padding: 0 2em;
   z-index: 0;
+  @media (max-width: $break_small) {
+    padding: 0 1em;
+  }
 }
 
 // We add pixels trackers, but don't want to mangle things
