--- a/source/stylesheets/lib/_slider.scss
+++ b/source/stylesheets/lib/_slider.scss
@@ -54,6 +54,10 @@ $prev-next-height: 126px;
 
 $hover-offset: 5%;
 
+.video-container {
+  z-index: 10007;
+}
+
 .slider {
   width: 100%;
   height: 0;
@@ -137,24 +141,10 @@ $hover-offset: 5%;
   }
   .play-icon {
     color: $nav-color;
-    width: 100px;
-    height: 100px;
+    width: 30%;
+    height: 30%;
     padding: 1em;
     margin: 0 auto !important;
-    
-    @include filter(drop-shadow(0 0 6px rgba(#000, .75)));
-    @media (min-width: 30em) {
-      width: 125px;
-      height: 125px;
-    }
-    @media (min-width: 50em) {
-      width: 150px;
-      height: 150px;
-    }
-    @media (max-width: $break_small) {
-      width: 60px;
-      height: 60px;
-    }
     &:hover {
       cursor: pointer;
       opacity: .7;
