--- a/source/partials/_episode_template.html.erb
+++ b/source/partials/_episode_template.html.erb
@@ -40,6 +40,15 @@ category_text = categories.join(' | ')
         <div class="video-container" id="video-container-<%= index %>" data-video-index="<%= index %>" data-video-id="<%=video_row.text %>"></div>
       </li>
     </ul>
+    <div id="navigation">
+            <!-- Navigation -->
+          <a href="#" class="prev" style="display: none;">
+            <svg class="prev" viewBox="0 0 30 126"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#prev-arrow"></use></svg>
+          </a>
+          <a href="#" class="next">
+          <svg class="next" viewBox="0 0 30 126"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#next-arrow"></use></svg>
+          </a>
+        </div>
   </section>
   <% end %>
 
