--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -83,3 +83,4 @@ $byline-sponsor-logo: "bp-invigorate-logo.png"; // color version of logo
 @import "lib/content__social";
 @import "lib/hamburger-menu";
 @import "lib/next-clicks";
+@import "lib/athena";
