comment out linkedin and social icon styling

--- a/source/partials/_social_share.html.erb
+++ b/source/partials/_social_share.html.erb
@@ -21,7 +21,7 @@
   <a class="nav__social__link" data-share-via="googleplus" data-shared="<%= app_name %>" href="<%= google_plus_url %>">
     <svg class="nav__social__icon svg-icon googleplus" viewBox="0 0 100 100"><use xlink:href="#google-plus"></use></svg>
   </a>
-  <a class="nav__social__link" data-share-via="linkedin" data-shared="<%= app_name %>" href="<%= linkedin_url %>">
+<!--   <a class="nav__social__link" data-share-via="linkedin" data-shared="<%= app_name %>" href="<%= linkedin_url %>">
     <svg class="nav__social__icon svg-icon linkedin" viewBox="0 0 100 100"><use xlink:href="#linkedin"></use></svg>
-  </a>
+  </a> -->
 </div>
